// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when creating 1`] = `
<Form
  onSubmit={[Function]}
>
  <FormRow>
    <Field
      component={[Function]}
      entityType="event"
      label="Images"
      name="images"
      parentFormName="EditEventImages"
    />
  </FormRow>
  <Divider
    type="basic"
  />
  <FormError />
  <FormButtons
    onCancel={null}
    submitLabel="Save and Create Event"
    submitting={false}
  />
</Form>
`;

exports[`should render correctly when editing 1`] = `
<Form
  onSubmit={[Function]}
>
  <FormRow>
    <Field
      component={[Function]}
      entityType="event"
      label="Images"
      name="images"
      parentFormName="EditEventImages"
    />
  </FormRow>
  <Divider
    type="basic"
  />
  <FormError />
  <FormButtons
    onCancel={[Function]}
    submitLabel="Save Event"
    submitting={false}
  />
</Form>
`;
